fixed canvas z-index

--- a/assets/stylesheet.css
+++ b/assets/stylesheet.css
@@ -47,7 +47,6 @@ canvas {
   margin-bottom: 15px;
   font-family: 'Bungee Shade', cursive;
   text-align: center;
-  z-index: -10;
 }
 
 .links {
